fix: make sort buttons align in 1 row

--- a/projects/mat-datatable-demo/src/app/app.component.scss
+++ b/projects/mat-datatable-demo/src/app/app.component.scss
@@ -8,6 +8,10 @@
   overflow: auto;
 }
 
-.sort-button {
+.sort-button-container {
   margin: 0 0 0.75em 1em;
+}
+
+.sort-button {
+  margin: 0 1em 0 0;
 }
